--- a/Session_8/package.json
+++ b/Session_8/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "start": "nodemon src/app.js",
-    "build": "echo "
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^5.1.0"
